# GuardianEye

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/routes/: app.py
backend/services/: __init__.py  agent.py  core.py  mcpserver.py  notifier.py
backend/services/models/: fall_detector.py  fire_detector.py
backend/util/: helpers.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CameraDetail.css  CameraDetail.tsx  CameraGrid.css  CameraGrid.tsx  CameraIndicator.css  CameraIndicator.tsx  CameraTile.css  CameraTile.tsx  EventDetail.css  EventDetail.tsx  Header.css  Header.tsx  PoseDetector.tsx  RealTimeAnalyzer.css  RealTimeAnalyzer.tsx  Sidebar.css  Sidebar.tsx
frontend/src/services/: api.ts
